Extra Credit - Add to Playlist and play playlist: completed

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
             </a>
             <div class="links-container">
                 <a ui-sref="collection" class="navbar-link">Collection</a>
+                <a ui-sref="playlists" class="navbar-link">Playlists</a>
             </div>
         </nav>
 
@@ -37,5 +38,6 @@
         <script src="/scripts/controllers/PlayerBarCtrl.js"></script>
         <script src="/scripts/directives/seekBar.js"></script>
         <script src="/scripts/filters/timecode.js"></script>
+        <script src="/scripts/controllers/PlaylistsCtrl.js"></script>
     </body>
 </html>
